--- a/rest-api-demo/src/main/resources/templates/access-denied.html
+++ b/rest-api-demo/src/main/resources/templates/access-denied.html
@@ -10,6 +10,6 @@
   <body>
     <h2>Access Denied - You are not authorized to access this resource.</h2>
     <hr>
-    <a th:href="@{/}">Back to Home Page</a>
+    <a th:href="@{/home}">Back to Home Page</a>
   </body>
 </html>
