--- a/rest-api-demo/src/main/resources/templates/home.html
+++ b/rest-api-demo/src/main/resources/templates/home.html
@@ -5,56 +5,81 @@
   <head>
     <meta charset="UTF-8">
     <title>cqueltech.com Company Home Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- BootStrap stylesheet must go before your own stylesheet so that any custom changes to bootstrap can be rendered. -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+    <!-- BootStrap JavaScript link-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+      integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+      crossorigin="anonymous"></script>
+    <!--Google Custom Fonts-->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&family=Ubuntu&display=swap"
+      rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/css/styles.css}" />
   </head>
 
   <body>
-    <h2>cqueltech.com Company Home Page Yoohoo</h2>
-    <hr>
-    <p>Welcome to the cqueltech.com company home page!</p>
+    <section id="title">
+      <div class="container-fluid">
+        <!-- Nav Bar -->
+        <nav class="navbar navbar-expand-lg navbar-dark" id="nav-navbar">
+          <a class="navbar-brand a-navbar-brand" href="http://cqueltech.com">cqueltech.com</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+              aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse div-navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item" sec:authorize="hasRole('STUDENT')">
+                <a class="nav-link" href="@{/courses}">Courses</a>
+              </li>
+              <li class="nav-item" sec:authorize="hasRole('STUDENT')">
+                <a class="nav-link" href="@{/reviews}">Course Reviews</a>
+              </li>
+              <li class="nav-item" sec:authorize="hasRole('INSTRUCTOR')">
+                <a class="nav-link" href="@{/instructors}">Instructors</a>
+              </li>
+              <li class="nav-item" sec:authorize="hasRole('INSTRUCTOR')">
+                <a class="nav-link" href="@{/students}">Students</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </section>
+
+    <br>
+    <p class="p-font p-font-lg">Welcome to the cqueltech.com student tracker Spring Boot Demo!</p>
     <hr>
     <!-- Display username and role -->
     <!-- 'principal.username' will display the username for the user currently logged in -->
     <!-- 'principal.authorities' will display the roles for the user currently logged in -->
-    <p>
+    <p class="p-font p-font-md">
       User: <span sec:authentication="principal.username"></span>
       <br><br>
       Role(s): <span sec:authentication="principal.authorities"></span>
     </p>
-    
-    <!-- Add a link to point to /courses ... this is for users with USER role only -->
-    <!-- Link is only displayed for users with MANAGER role -->
-    <div sec:authorize="hasRole('USER')">
-      <hr>
-      <p>
-        <a th:href="@{/courses}">Courses</a>
-        (For USERs)
-      </p>
-    </div>
-    <!-- Add a link to point to /instructors...this is only for the MANAGERs -->
-    <!-- Link is only displayed for users with MANAGER role -->
-    <div sec:authorize="hasRole('MANAGER')">
-      <hr>
-      <p>
-        <a th:href="@{/instructors}">Instructors</a>
-        (Only for MANAGERs)
-      </p>
-    </div>
-    <!-- Add a link to point to /students...this is only for the MANAGERs -->
-    <!-- Link is only displayed for users with MANAGER role -->
-    <div sec:authorize="hasRole('MANAGER')">
-      <hr>
-      <p>
-        <a th:href="@{/students}">Students</a>
-        (Only for MANAGERs)
-      </p>
-    </div>
-
     <hr>
     <!-- Add a logout button which will take us back to the login form.
          Send data to default logout URL: /logout. Logout URL will be handled by
          Spring Security Filters, therefore no coding required. -->
     <form action="#" th:action="@{/logout}" method="POST">
-      <input type="submit" value="Logout" />
+      <input class="btn btn-md mb-3" type="submit" value="Logout" />
     </form>
+    <br>
+    <br>
+    <p style="margin-left: 6rem; margin-right: 6rem;" class="p-font p-font-sm">
+      Depending on the role of the user various links are displayed in the NavBar. These links
+      will permit access to the database and display relevant information. Only information
+      authorised according to the user's role will be displayed. When registering a new user
+      the individual can create a user with either the STUDENT or INSTRUCTOR role. An instructor
+      will also have the STUDENT role privileges. 
+    </p>
+    <p style="margin-left: 6rem; margin-right: 6rem;" class="p-font p-font-sm">
+      Here the database is tracking courses, the instructors leading the courses, and
+      the students taking the courses. As well as this students are also able to leave reviews on
+      particular courses.
+    </p>
   </body>
 </html>
