--- a/rest-api-demo/src/main/resources/templates/add-user.html
+++ b/rest-api-demo/src/main/resources/templates/add-user.html
@@ -19,33 +19,9 @@
 </head>
 
 <body>
+  <!-- Display the title navigation bar -->
   <section id="title">
-    <div class="container-fluid">
-      <!-- Nav Bar -->
-      <nav class="navbar navbar-expand-lg navbar-dark" id="nav-navbar">
-        <a class="navbar-brand a-navbar-brand" href="http://cqueltech.com">cqueltech.com</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
-            aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse div-navbar-collapse" id="navbarTogglerDemo02">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Education/Experience</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Skills</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Contact Me</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </div>
+    <div th:replace="~{/fragments/header}" />
   </section>
 
   <div class="container">
@@ -94,6 +70,22 @@
 
               <div style="margin-bottom: 25px;" class="input-group">
                 <input type="password" th:field="*{password2}" name="password2" placeholder="re-enter password" class="form-control field" />
+              </div>
+
+              <div class="form-check form-check-reverse" style="margin-bottom: 25px;">
+                <input id="roleStudent" class="form-check-input" type="checkbox" th:field="*{roleStudent}" name="roleStudent" value="1" />
+                <label class="form-check-label" for="roleStudent">Student ROLE</label>
+              </div>
+
+              <script>
+                const chkBoxStudentRole = document.getElementById("roleStudent")
+                chkBoxStudentRole.checked = true;
+                chkBoxStudentRole.disabled = true;
+              </script>
+
+              <div class="form-check form-check-reverse" style="margin-bottom: 25px;">
+                <input class="form-check-input" type="checkbox" th:field="*{roleInstructor}" name="roleInstructor" value="1" />
+                <label class="form-check-label" for="roleInstructor">Instructor ROLE</label>
               </div>
 
               <!-- Register Button -->
