--- a/rest-api-demo/src/main/resources/templates/courses.html
+++ b/rest-api-demo/src/main/resources/templates/courses.html
@@ -2,13 +2,53 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <title>Bootstrap Login Page</title>
+  <title>Course Directory</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- BootStrap stylesheet must go before your own stylesheet so that any custom changes to bootstrap can be rendered. -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+  integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+  <!-- BootStrap JavaScript link-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+    integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+    crossorigin="anonymous"></script>
+  <!--Google Custom Fonts-->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&family=Ubuntu&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" th:href="@{/css/styles.css}" />  
 </head>
 <body>
+  <!-- Display the title navigation bar -->
+  <section id="title">
+    <div th:replace="~{/fragments/header}" />
+  </section>
 
+  <section id="course-list">
+  
+    <h3 class="page-heading">Course Directory</h3>
+    <hr>
+    <table class="table table-bordered table-striped table-hover tbody-font">
+      <thead class="table-dark">
+        <tr>
+          <th>ID</th>
+          <th>Course</th>
+          <th>Instructor</th>
+          <th>Instructor ID</th>
+        </tr>
+      </thead>
+      
+      <tbody class="table-secondary">
+        <!-- For each of the employees in the models employees attribute.-->
+        <tr th:each="course : ${courses}">
+        
+          <td th:text="${course.id}" />	
+          <td th:text="${course.title}" />	
+          <td th:text="${course.getInstructor().getFirstName()} + ' ' + ${course.getInstructor().getLastName()}" />
+          <td th:text="${course.getInstructor().getId()}" />
+        
+        </tr>
+      </tbody>		
+    </table>
+  </section>
 </body>
 </html>
