--- a/rest-api-demo/src/main/resources/templates/fancy-login.html
+++ b/rest-api-demo/src/main/resources/templates/fancy-login.html
@@ -19,33 +19,9 @@
 </head>
 
 <body>
+  <!-- Display the title navigation bar -->
   <section id="title">
-    <div class="container-fluid">
-      <!-- Nav Bar -->
-      <nav class="navbar navbar-expand-lg navbar-dark" id="nav-navbar">
-        <a class="navbar-brand a-navbar-brand" href="http://cqueltech.com">cqueltech.com</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
-            aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse div-navbar-collapse" id="navbarTogglerDemo02">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item" sec:authorize="hasRole('STUDENT')">
-              <a class="nav-link" href="">Courses</a>
-            </li>
-            <li class="nav-item" sec:authorize="hasRole('STUDENT')">
-              <a class="nav-link" href="">Course Reviews</a>
-            </li>
-            <li class="nav-item" sec:authorize="hasRole('INSTRUCTOR')">
-              <a class="nav-link" href="">Instructors</a>
-            </li>
-            <li class="nav-item" sec:authorize="hasRole('INSTRUCTOR')">
-              <a class="nav-link" href="">Students</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </div>
+    <div th:replace="~{/fragments/header}" />
   </section>
 
   <div class="container">
