--- a/rest-api-demo/src/main/resources/templates/reviews.html
+++ b/rest-api-demo/src/main/resources/templates/reviews.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <title>Instructor Directory</title>
+  <title>Course Reviews</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,5 +16,4 @@
   </section>
 
 </body>
-
 </html>
