--- a/rest-api-demo/src/main/resources/templates/students.html
+++ b/rest-api-demo/src/main/resources/templates/students.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <title>Bootstrap Login Page</title>
+  <title>Student Directory</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+  <!-- Display the title navigation bar -->
+  <section id="title">
+    <div th:replace="/fragments/header" />
+  </section>
 
 </body>
 </html>
