--- a/rest-api-demo/src/main/resources/templates/courses.html
+++ b/rest-api-demo/src/main/resources/templates/courses.html
@@ -20,7 +20,7 @@
 <body>
   <!-- Display the title navigation bar -->
   <section id="title">
-    <div th:replace="~{/fragments/header}" />
+    <div th:replace="~{/fragments/navbar}" />
   </section>
 
   <section id="course-list">
