--- a/rest-api-demo/src/main/resources/templates/fancy-login.html
+++ b/rest-api-demo/src/main/resources/templates/fancy-login.html
@@ -21,7 +21,7 @@
 <body>
   <!-- Display the title navigation bar -->
   <section id="title">
-    <div th:replace="~{/fragments/header}" />
+    <div th:replace="~{/fragments/navbar}" />
   </section>
 
   <div class="container">
