--- a/rest-api-demo/src/main/resources/templates/home.html
+++ b/rest-api-demo/src/main/resources/templates/home.html
@@ -3,27 +3,15 @@
     xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
   <head>
-    <meta charset="UTF-8">
     <title>cqueltech.com Company Home Page</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- BootStrap stylesheet must go before your own stylesheet so that any custom changes to bootstrap can be rendered. -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
-    <!-- BootStrap JavaScript link-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
-      integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
-      crossorigin="anonymous"></script>
-    <!--Google Custom Fonts-->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&family=Ubuntu&display=swap"
-      rel="stylesheet">
-    <link rel="stylesheet" th:href="@{/css/styles.css}" />
+    <div th:replace="~{/fragments/head}" />
   </head>
 
   <body>
 
     <!-- Display the title navigation bar -->
     <section id="title">
-      <div th:replace="~{/fragments/header}" />
+      <div th:replace="~{/fragments/navbar}" />
     </section>
     
     <br>
