--- a/rest-api-demo/src/main/resources/templates/instructors.html
+++ b/rest-api-demo/src/main/resources/templates/instructors.html
@@ -3,17 +3,45 @@
 
 <head>
   <title>Instructor Directory</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+  <div th:replace="~{/fragments/head}" />
 </head>
 
 <body>
   <!-- Display the title navigation bar -->
   <section id="title">
-    <div th:replace="/fragments/header" />
+    <div th:replace="~{/fragments/navbar}" />
   </section>
+
+  <section id="course-list">
+  
+    <h3 class="page-heading">Instructor Directory</h3>
+    <hr>
+    <table class="table table-bordered table-striped table-hover tbody-font">
+      <thead class="table-dark">
+        <tr>
+          <th>ID</th>
+          <th>Name</th>
+          <th>Email</th>
+          <th>Age</th>
+          <th>Sex</th>
+          <th>Address</th>
+        </tr>
+      </thead>
+      
+      <tbody class="table-secondary">
+        <!-- For each of the employees in the models employees attribute.-->
+        <tr th:each="instructor : ${instructors}">
+        
+          <td th:text="${instructor.id}" />	
+          <td th:text="${instructor.firstName} + ' ' + ${instructor.lastName}" />	
+          <td th:text="${instructor.email}" />
+          <td th:text="${instructor.getInstructorDetail().getAge()}" />
+          <td th:text="${instructor.getInstructorDetail().getSex()}" />
+          <td th:text="${instructor.getInstructorDetail().getAddress()}" />
+        
+        </tr>
+      </tbody>		
+    </table>
 
 </body>
 
