--- a/rest-api-demo/src/main/resources/templates/reviews.html
+++ b/rest-api-demo/src/main/resources/templates/reviews.html
@@ -5,15 +5,50 @@
   <title>Course Reviews</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- BootStrap stylesheet must go before your own stylesheet so that any custom changes to bootstrap can be rendered. -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+  integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+  <!-- BootStrap JavaScript link-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+    integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+    crossorigin="anonymous"></script>
+  <!--Google Custom Fonts-->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&family=Ubuntu&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" th:href="@{/css/styles.css}" />  
 </head>
-
 <body>
   <!-- Display the title navigation bar -->
   <section id="title">
-    <div th:replace="/fragments/header" />
+    <div th:replace="~{/fragments/navbar}" />
   </section>
 
+  <section id="course-review-list">
+  
+    <h3 class="page-heading">Course Reviews</h3>
+    <hr>
+    <table class="table table-bordered table-striped table-hover tbody-font">
+      <thead class="table-dark">
+        <tr>
+          <th>ID</th>
+          <th>Course</th>
+          <th>Review</th>
+        </tr>
+      </thead>
+      
+      <tbody class="table-secondary">
+        <!-- For each of the courses in the models course-reviews attribute.-->
+        <th:block th:each="course : ${courseReviews}">
+          <tr th:each="review : ${course.getReview()}">
+        
+            <td th:text="${course.id}" />
+            <td th:text="${course.title}" />
+            <td th:text="${review.comment}" />
+        
+          </tr>
+        </th:block>
+      </tbody>		
+    </table>
+  </section>
 </body>
 </html>
