--- a/rest-api-demo/src/main/resources/templates/students.html
+++ b/rest-api-demo/src/main/resources/templates/students.html
@@ -3,16 +3,45 @@
 
 <head>
   <title>Student Directory</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+  <div th:replace="~{/fragments/head}" />
 </head>
 
 <body>
   <!-- Display the title navigation bar -->
   <section id="title">
-    <div th:replace="/fragments/header" />
+    <div th:replace="~{/fragments/navbar}" />
+  </section>
+
+  <section id="course-review-list">
+  
+    <h3 class="page-heading">Course Reviews</h3>
+    <hr>
+    <table class="table table-bordered table-striped table-hover tbody-font">
+      <thead class="table-dark">
+        <tr>
+          <th>Course ID</th>
+          <th>Course</th>
+          <th>Student</th>
+          <th>Email</th>
+          <th>Student ID</th>
+        </tr>
+      </thead>
+      
+      <tbody class="table-secondary">
+        <!-- For each of the courses in the models course-reviews attribute.-->
+        <th:block th:each="course : ${courseStudents}">
+          <tr th:each="student : ${course.getStudents()}">
+        
+            <td th:text="${course.id}" />
+            <td th:text="${course.title}" />
+            <td th:text="${student.firstName} + ' ' + ${student.lastName}" />
+            <td th:text="${student.email}" />
+            <td th:text="${student.id}" />
+        
+          </tr>
+        </th:block>
+      </tbody>		
+    </table>
   </section>
 
 </body>
