--- a/rest-api-demo/src/main/resources/templates/fragments/navbar.html
+++ b/rest-api-demo/src/main/resources/templates/fragments/navbar.html
@@ -20,6 +20,9 @@
         <li class="nav-item" sec:authorize="hasRole('INSTRUCTOR')">
           <a class="nav-link" th:href="@{/courses-students}">Students</a>
         </li>
+        <li class="nav-item" sec:authorize="hasRole('INSTRUCTOR')">
+          <a class="nav-link" th:href="@{/enroll-student}">Enroll Student</a>
+        </li>
       </ul>
     </div>
   </nav>
