--- a/rest-api-demo/src/main/resources/templates/students.html
+++ b/rest-api-demo/src/main/resources/templates/students.html
@@ -14,7 +14,7 @@
 
   <section id="course-review-list">
   
-    <h3 class="page-heading">Course Reviews</h3>
+    <h3 class="page-heading">Students</h3>
     <hr>
     <table class="table table-bordered table-striped table-hover tbody-font">
       <thead class="table-dark">
@@ -24,6 +24,7 @@
           <th>Student</th>
           <th>Email</th>
           <th>Student ID</th>
+          <th>Delete Student</th>
         </tr>
       </thead>
       
@@ -31,16 +32,21 @@
         <!-- For each of the courses in the models course-reviews attribute.-->
         <th:block th:each="course : ${courseStudents}">
           <tr th:each="student : ${course.getStudents()}">
-        
+      
             <td th:text="${course.id}" />
             <td th:text="${course.title}" />
             <td th:text="${student.firstName} + ' ' + ${student.lastName}" />
             <td th:text="${student.email}" />
             <td th:text="${student.id}" />
-        
+            <td>
+              <a th:href="@{/courses-students/delete(studentId=${student.id}, courseId=${course.id})}" class="btn btn-danger btn-sm"
+                onclick="if (!(confirm('Are you sure you want to remove student from this course?'))) return false">
+                  Delete
+              </a>
+            </td>
           </tr>
         </th:block>
-      </tbody>		
+      </tbody>
     </table>
   </section>
 
