--- a/rest-api-demo/src/main/resources/static/css/styles.css
+++ b/rest-api-demo/src/main/resources/static/css/styles.css
@@ -69,6 +69,14 @@ p {
   font-size: 1.2rem;
 }
 
+.button-link {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  margin: 0 18px;
+}
+
 #nav-navbar {
   background-color: var(--bg-color);
   margin-bottom: 50px;
