--- a/rest-api-demo/src/main/resources/templates/fragments/navbar.html
+++ b/rest-api-demo/src/main/resources/templates/fragments/navbar.html
@@ -8,28 +8,28 @@
     </button>
     <div style="margin-top: 30px;" class="collapse navbar-collapse div-navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav ms-auto" style="float: right;">
-        <li class="nav-item" sec:authorize="hasRole('STUDENT')">
+        <li class="nav-item" sec:authorize="hasAuthority('STUDENT')">
           <a class="nav-link" th:href="@{/courses}">Courses</a>
         </li>
-        <li class="nav-item" sec:authorize="hasRole('STUDENT')">
+        <li class="nav-item" sec:authorize="hasAuthority('STUDENT')">
           <a class="nav-link" th:href="@{/course-reviews}">Course Reviews</a>
         </li>
-        <li class="nav-item" sec:authorize="hasRole('INSTRUCTOR')">
+        <li class="nav-item" sec:authorize="hasAuthority('INSTRUCTOR')">
           <a class="nav-link" th:href="@{/instructors}">Instructors</a>
         </li>
-        <li class="nav-item" sec:authorize="hasRole('INSTRUCTOR')">
+        <li class="nav-item" sec:authorize="hasAuthority('INSTRUCTOR')">
           <a class="nav-link" th:href="@{/courses-students}">Students</a>
         </li>
-        <li class="nav-item" sec:authorize="hasRole('INSTRUCTOR')">
+        <li class="nav-item" sec:authorize="hasAuthority('INSTRUCTOR')">
           <a class="nav-link" th:href="@{/enroll-student}">Enroll Student</a>
         </li>
-        <li class="nav-item" sec:authorize="hasRole('ADMIN')">
+        <li class="nav-item" sec:authorize="hasAuthority('ADMIN')">
           <a class="nav-link" th:href="@{/create-entity/create(entityType='course')}">Create Course</a>
         </li>
-        <li class="nav-item" sec:authorize="hasRole('ADMIN')">
+        <li class="nav-item" sec:authorize="hasAuthority('ADMIN')">
           <a class="nav-link" th:href="@{/create-entity/create(entityType='student')}">Create Student</a>
         </li>
-        <li class="nav-item" sec:authorize="hasRole('ADMIN')">
+        <li class="nav-item" sec:authorize="hasAuthority('ADMIN')">
           <a class="nav-link" th:href="@{/create-entity/create(entityType='instructor')}">Create Instructor</a>
         </li>
         <li>
